------------------------------
- Fixed issue in the optimization to _trim_arity, when the full 
  stacktrace is retrieved to determine if a TypeError is raised in
  pyparsing or in the caller's parse action. Code was traversing
  the full stacktrace, and potentially encountering UnicodeDecodeError.

- Fixed bug in ParserElement.inlineLiteralsUsing, causing infinite 
  loop with Suppress.

- Added a few more inline doc examples.


Version 2.1.7 - 
------------------------------
- Fixed regression reported by Andrea Censi (surfaced in PyContracts 
  tests) when using ParseSyntaxExceptions (raised when using operator '-')
  with packrat parsing.

- Minor fix to oneOf, to accept all iterables, not just space-delimited
  strings and lists. (If you have a list or set of strings, it is 
  not necessary to concat them using ' '.join to pass them to oneOf,
  oneOf will accept the list or set or generator directly.)


Version 2.1.6 - 
------------------------------
- *Major packrat upgrade*, inspired by patch provided by Tal Einat - 
  many, many, thanks to Tal for working on this! Tal's tests show 
  faster parsing performance (2X in some tests), *and* memory reduction 
  from 3GB down to ~100MB! Requires no changes to existing code using 
  packratting. (Uses OrderedDict, available in Python 2.7 and later.
  For Python 2.6 users, will attempt to import from ordereddict
  backport. If not present, will implement pure-Python Fifo dict.)

- Minor API change - to better distinguish between the flexible
  numeric types defined in pyparsing_common, I've changed "numeric" 
  (which parsed numbers of different types and returned int for ints, 
  float for floats, etc.) and "number" (which parsed numbers of int
  or float type, and returned all floats) to "number" and "fnumber"
  respectively. I hope the "f" prefix of "fnumber" will be a better
  indicator of its internal conversion of parsed values to floats, 
  while the generic "number" is similar to the flexible number syntax